# CMakeLists.txt
cmake_minimum_required(VERSION 3.14.1)
project(opaes)

if(CMAKE_COMPILER_IS_GNUCC)
    message("COMPILER IS GNUCC")
        # ADD_DEFINITIONS ( -std=c++14 -std=gnu99)
endif(CMAKE_COMPILER_IS_GNUCC)

include(GNUInstallDirs)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})

message("-- " ${CMAKE_HOST_SYSTEM_NAME})
message("-- " ${CMAKE_HOST_SYSTEM_PROCESSOR})
message("-- " ${CMAKE_TOOLCHAIN_FILE})

include_directories(${CMAKE_SOURCE_DIR})
FILE(GLOB_RECURSE FILES ${CMAKE_SOURCE_DIR}/*.c)

add_library(${PROJECT_NAME} SHARED ${FILES})